[gd_scene load_steps=6 format=2]

[ext_resource path="res://Internal/Default/Icons/token_remove.png" type="Texture" id=1]
[ext_resource path="res://Internal/Default/Icons/arrow_cross_divided.png" type="Texture" id=2]
[ext_resource path="res://Internal/Default/Fonts/RobotoMono/static/RobotoMono-BoldItalic.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Internal/Scripts/UI/EditsListDragElement.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=5]
size = 14
use_filter = true
font_data = ExtResource( 3 )

[node name="DragElement" type="PanelContainer"]
margin_right = 199.0
margin_bottom = 39.0
script = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 192.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 14.0
margin_bottom = 25.0
alignment = 1

[node name="DragIcon" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.223529 )
margin_top = 5.0
margin_right = 14.0
margin_bottom = 19.0
rect_min_size = Vector2( 14, 14 )
hint_tooltip = "Drag 'n' drop"
mouse_default_cursor_shape = 13
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 2 )
expand = true

[node name="Spacer" type="Control" parent="HBoxContainer"]
margin_left = 18.0
margin_right = 18.0
margin_bottom = 25.0

[node name="DeleteButton" type="MenuButton" parent="HBoxContainer"]
margin_left = 22.0
margin_right = 50.0
margin_bottom = 25.0
rect_min_size = Vector2( 28, 0 )
hint_tooltip = "Delete?"
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
icon = ExtResource( 1 )
flat = false
icon_align = 1
expand_icon = true
items = [ "-- Delete? --", null, 0, false, true, 0, 0, null, "", false, "Yes", null, 0, false, false, 1, 0, null, "", false, "Cancel", null, 0, false, false, 2, 0, null, "", false ]

[node name="EditButton" type="Button" parent="HBoxContainer"]
margin_left = 54.0
margin_right = 185.0
margin_bottom = 25.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_pressed = Color( 0.619608, 0.619608, 0.619608, 1 )
custom_fonts/font = SubResource( 5 )
toggle_mode = true
enabled_focus_mode = 0
text = "Option Name"
flat = true
align = 0

[connection signal="pressed" from="HBoxContainer/EditButton" to="." method="_on_EditButton_pressed"]
